--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.18",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.9",
+    "@types/numeral": "^2.0.1",
     "prettier": "^2.3.2"
   }
 }
